--- a/innovations.html
+++ b/innovations.html
@@ -99,7 +99,7 @@
   </div>
 
   <div class="section-title">
-    Tableau Innovations Prototype
+    Innovative visualisations possible with Tableau
   </div>
 
   <div class="tableau-wrapper">
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
