Change logo image in existing.html
Updated logo image in the header from 'accan_logo.avif' to 'Atlas-Consulting-Logo.png'.

--- a/existing.html
+++ b/existing.html
@@ -95,7 +95,7 @@
 
   <!-- Logo Header -->
   <div class="top-header">
-    <img src="accan_logo.avif" alt="ACCAN Logo">
+    <img src="Atlas-Consulting-Logo.png" alt="Atlas Consulting Logo">
   </div>
 
   <div class="section-title">
@@ -114,4 +114,5 @@
 
 </body>
 </html>
+
 
