--- a/Power-Bi-Existing.html
+++ b/Power-Bi-Existing.html
@@ -36,7 +36,7 @@
   /* Power BI wrapper */
   .pbi-desktop {
     background: #ffffff;
-    padding: 40px 0;
+    padding: 40px 80px 0 80px;
     display: flex;
     justify-content: center;
   }
@@ -67,6 +67,7 @@
       font-size: 26px;
       padding: 24px;
     }
+
   }
 
 
@@ -87,7 +88,7 @@
   </div>
 
   <div class="pbi-desktop">
-    <iframe title="ACCAN_POC" width="100%" height="2050" src="https://app.powerbi.com/view?r=eyJrIjoiNjBhZTAzNDktZDQyNy00MDIxLTkwMzUtM2FiZWRmOGJhMjY0IiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="ACCAN_POC" width="100%" height="2150" src="https://app.powerbi.com/view?r=eyJrIjoiNjBhZTAzNDktZDQyNy00MDIxLTkwMzUtM2FiZWRmOGJhMjY0IiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
   
   <div class="pbi-mobile">
@@ -96,9 +97,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
