--- a/Power-Bi-Innovations.html
+++ b/Power-Bi-Innovations.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title> Tableau Innovations | Accan </title>
+<title> Power BI Innovations | Accan </title>
 <style>
   body {
     margin: 0;
@@ -18,12 +18,10 @@
     display: flex;
     align-items: center;
   }
-
   .top-header img {
     height: 48px;       /* desktop logo size */
     max-width: 100%;
   }
-
   /* Section title */
   .section-title {
     background: #e9e9e9;
@@ -36,11 +34,10 @@
   /* Power BI wrapper */
   .pbi-desktop {
     background: #ffffff;
-    padding: 40px 0;
+    padding: 40px 80px 0 80px;
     display: flex;
     justify-content: center;
   }
-
   /* Power BI wrapper */
   .pbi-mobile {
     background: #ffffff;
@@ -58,49 +55,14 @@
     .top-header {
       padding: 16px;
     }
-
     .top-header img {
       height: 36px;   /* smaller logo on mobile */
     }
-
     .section-title {
       font-size: 26px;
       padding: 24px;
     }
-
-    .pbi-wix-container {
-      height: 3050px;
-    }
   }
-
-  .pbi-wix-container {
-    position: relative;
-    width: 95%;
-    max-width: 1400px;
-    height: 1850px;
-    overflow: hidden;
-    background: #ffffff;
-  }
-
-  .pbi-wix-container iframe {
-    width: 100%;
-    height: 100%;
-    border: 0;
-  }
-
-  /* Hide Power BI footer toolbar */
-  .pbi-wix-container::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: #ffffff;
-    z-index: 9999;
-    pointer-events: none;
-  }
-
 </style>
 </head>
 
@@ -112,26 +74,16 @@
   </div>
 
   <div class="section-title">
-    Innovative visualisations possible with Tableau
+    Innovative visualisations possible with Power BI
   </div>
 
   <div class="pbi-desktop">
-    <div class="pbi-wix-container">
-      <iframe title="ACCAN_Innovation" width="100%" height="1900" src="https://app.powerbi.com/view?r=eyJrIjoiMjdmNzI3ZGMtNzdlNS00YjdkLTg1OGItYzA5YTFlMzVhNTBmIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
-    </div>
+    <iframe title="ACCAN_Innovation" width="100%" height="1950" src="https://app.powerbi.com/view?r=eyJrIjoiMjdmNzI3ZGMtNzdlNS00YjdkLTg1OGItYzA5YTFlMzVhNTBmIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
   
   <div class="pbi-mobile">
-    <div class="pbi-wix-container">
-      <iframe title="ACCAN_Innovation_Single_Column" width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiZmIwMzZhZmItYTBmOS00ZjM3LTljY2EtNDRlMjQzZDM2ZWUxIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
-    </div>
+    <iframe title="ACCAN_Innovation_Single_Column" width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiZmIwMzZhZmItYTBmOS00ZjM3LTljY2EtNDRlMjQzZDM2ZWUxIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
 
 </body>
 </html>
-
-
-
-
-
-
