--- a/Power-Bi-Innovations.html
+++ b/Power-Bi-Innovations.html
@@ -18,10 +18,12 @@
     display: flex;
     align-items: center;
   }
+
   .top-header img {
     height: 48px;       /* desktop logo size */
     max-width: 100%;
   }
+
   /* Section title */
   .section-title {
     background: #e9e9e9;
@@ -38,6 +40,7 @@
     display: flex;
     justify-content: center;
   }
+
   /* Power BI wrapper */
   .pbi-mobile {
     background: #ffffff;
@@ -52,16 +55,16 @@
     .pbi-desktop { display: none; }
     .pbi-mobile { display: flex; }
 
-    .top-header {
-      padding: 16px;
-    }
+
     .top-header img {
       height: 36px;   /* smaller logo on mobile */
     }
+
     .section-title {
       font-size: 26px;
       padding: 24px;
     }
+
   }
 </style>
 </head>
@@ -82,7 +85,7 @@
   </div>
   
   <div class="pbi-mobile">
-    <iframe title="ACCAN_Innovation_Single_Column" width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiZmIwMzZhZmItYTBmOS00ZjM3LTljY2EtNDRlMjQzZDM2ZWUxIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="ACCAN_Innovation_Single_Column" width="100%" height="1900" src="https://app.powerbi.com/view?r=eyJrIjoiZmIwMzZhZmItYTBmOS00ZjM3LTljY2EtNDRlMjQzZDM2ZWUxIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
 
 </body>
