--- a/Power-Bi-Existing.html
+++ b/Power-Bi-Existing.html
@@ -70,9 +70,6 @@
 
   }
 
-
-
-
 </style>
 </head>
 
@@ -92,7 +89,7 @@
   </div>
   
   <div class="pbi-mobile">
-    <iframe title="ACCAN_POC_Single" width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ2Yjg5MWMtZWI0MC00NjkyLWFkNmEtNmJiMjQzNTQ0ZDViIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="ACCAN_POC_Single" width="100%" height="2400" src="https://app.powerbi.com/view?r=eyJrIjoiOWQ2Yjg5MWMtZWI0MC00NjkyLWFkNmEtNmJiMjQzNTQ0ZDViIiwidCI6IjgxMDgzMGFjLTQ1YmEtNDU4Yy1hZDg0LTBlMmFiNGQ4NWRhNSJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
 
 </body>
